fixed photo from stretching

--- a/src/components/Photo.module.css
+++ b/src/components/Photo.module.css
@@ -10,7 +10,7 @@
 }
 
 .image {
-  width: 30vw;
+  width: 40vw;
   height: auto;
 }
 
